--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 
     <div class="page-content">
       <div class="wrapper">
+        {% include sub-nav.html %}
         {{ content }}
       </div>
     </div>
